tests/baselines/reference/typeParameterAsTypeParameterConstraintTransitively2.errors.txt
typeParameterAsTypeParameterConstraintTransitively2.ts(16,5): error TS2454: Variable 'a' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(16,8): error TS2454: Variable 'b' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(16,11): error TS2454: Variable 'a' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(17,5): error TS2454: Variable 'a' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(17,39): error TS2454: Variable 'b' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(22,5): error TS2454: Variable 'b' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(22,8): error TS2454: Variable 'a' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(22,11): error TS2454: Variable 'c' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(23,5): error TS2454: Variable 'c' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(23,8): error TS2454: Variable 'c' is used before being assigned.
typeParameterAsTypeParameterConstraintTransitively2.ts(23,11): error TS2454: Variable 'a' is used before being assigned.


==== typeParameterAsTypeParameterConstraintTransitively2.ts (11 errors) ====
    // using a type parameter as a constraint for a type parameter is invalid
    // these should be errors at the type parameter constraint declarations, and have no downstream errors
    
    interface A { foo: number }
    interface B extends A { bar: string; }
    interface C extends B { baz: boolean; }
    var a: A;
    var b: B;
    var c: C;
    
    function foo<T, U, V>(x: T, y: U, z: V): V { return z; }
    //function foo<T, U extends T, V extends U>(x: T, y: U, z: V): V { return z; }
    
    foo(1, 2, '');
    foo({ x: 1 }, { x: 1, y: '' }, { x: 2, y: 2, z: true });
    foo(a, b, a);
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
           ~
!!! error TS2454: Variable 'b' is used before being assigned.
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
    foo(a, { foo: 1, bar: '', hm: true }, b);
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
                                          ~
!!! error TS2454: Variable 'b' is used before being assigned.
    foo((x: number, y: string) => { }, (x, y: boolean) => { }, () => { });
    
    function foo2<T extends A, U extends A, V extends A>(x: T, y: U, z: V): V { return z; }
    //function foo2<T extends A, U extends T, V extends U>(x: T, y: U, z: V): V { return z; }
    foo(b, a, c);
        ~
!!! error TS2454: Variable 'b' is used before being assigned.
           ~
!!! error TS2454: Variable 'a' is used before being assigned.
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
    foo(c, c, a);
        ~
!!! error TS2454: Variable 'c' is used before being assigned.
           ~
!!! error TS2454: Variable 'c' is used before being assigned.
              ~
!!! error TS2454: Variable 'a' is used before being assigned.